[package]
name = "toy-rust-os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.8"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

# cargo build時に使用
[profile.dev]
panic = "abort" # アンワインドの無効化

# cargo build --release時に使用
[profile.release]
panic = "abort" # アンワインドの無効化

# test時に無限ループしないよう設定
# isa-debug-exitで値がiobaseに指定されたI/Oポートに書き込まれたらQEMUは終了する
[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]
test-success-exit-code = 33
